--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -15,8 +15,11 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
+
       # Setup gcloud CLI
-      - uses: GoogleCloudPlatform/github-actions/setup-gcloud@main
+      # - uses: GoogleCloudPlatform/github-actions/setup-gcloud@main
+      - uses: google-github-actions/setup-gcloud@v0
+
         with:
             version: '275.0.0'
             service_account_email: ${{ secrets.SA_EMAIL }}
