--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -25,6 +25,13 @@ jobs:
             version: '416.0.0'
             service_account_email: ${{ secrets.SA_EMAIL }}
             service_account_key: ${{ secrets.GCP_SA_KEY_JSON}}
+      - id: 'auth'
+        name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v0
+        with: 
+          token_format: 'access_token'
+          credentials_json: '${{ secrets.GCP_SA_KEY_JSON }}'
+
 
       # Configure gcloud CLI
       - name: gcloud Set up
