--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -7,7 +7,7 @@ on:
 env:
   PROJECT_ID: sonic-cat-363104
   IMAGE_NAME: email-parser
-  # RUN_REGION: us-east1
+  RUN_REGION: us-central1
 jobs:
   build:
     name: Build Docker and deploy cloud run
@@ -20,18 +20,17 @@ jobs:
       # Setup gcloud CLI
       # - uses: GoogleCloudPlatform/github-actions/setup-gcloud@main
       - uses: google-github-actions/setup-gcloud@v1
-
         with:
             version: '416.0.0'
             service_account_email: ${{ secrets.SA_EMAIL }}
             service_account_key: ${{ secrets.GCP_SA_KEY_JSON}}
+
       - id: 'auth'
         name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v0
         with: 
           token_format: 'access_token'
           credentials_json: '${{ secrets.GCP_SA_KEY_JSON }}'
-
 
       # Configure gcloud CLI
       - name: gcloud Set up
@@ -43,5 +42,5 @@ jobs:
         run: gcloud builds submit --tag gcr.io/$PROJECT_ID/$IMAGE_NAME:$GITHUB_SHA
 
       - name: Deploy
-        run: gcloud run deploy $PROJECT_ID --image gcr.io/$PROJECT_ID/$IMAGE_NAME:$GITHUB_SHA --platform managed
+        run: gcloud run deploy $PROJECT_ID --image gcr.io/$PROJECT_ID/$IMAGE_NAME:$GITHUB_SHA --platform managed --region $RUN_REGION
 
