--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -8,6 +8,7 @@ env:
   PROJECT_ID: sonic-cat-363104
   IMAGE_NAME: email-parser
   RUN_REGION: us-central1
+  SERVICE_NAME: email-reciever
 jobs:
   build:
     name: Build Docker and deploy cloud run
@@ -42,5 +43,6 @@ jobs:
         run: gcloud builds submit --tag gcr.io/$PROJECT_ID/$IMAGE_NAME:$GITHUB_SHA
 
       - name: Deploy
-        run: gcloud run deploy $PROJECT_ID --image gcr.io/$PROJECT_ID/$IMAGE_NAME:$GITHUB_SHA --platform managed --region $RUN_REGION
+        run: gcloud run services update $SERVICE_NAME --image=gcr.io/$PROJECT_ID/$IMAGE_NAME:$GITHUB_SHA --region $RUN_REGION
+        # run: gcloud run deploy $PROJECT_ID --image gcr.io/$PROJECT_ID/$IMAGE_NAME:$GITHUB_SHA --platform managed --region $RUN_REGION
 
