--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -6,7 +6,7 @@ on:
       - develop
 env:
   PROJECT_ID: sonic-cat-363104
-  IMAGE_NAME: email-parser
+  IMAGE_NAME: email-receiver
   RUN_REGION: us-central1
   SERVICE_NAME: email-reciever
 jobs:
@@ -19,7 +19,6 @@ jobs:
         uses: actions/checkout@v2
 
       # Setup gcloud CLI
-      # - uses: GoogleCloudPlatform/github-actions/setup-gcloud@main
       - uses: google-github-actions/setup-gcloud@v1
         with:
             version: '416.0.0'
@@ -45,4 +44,3 @@ jobs:
       - name: Deploy
         run: gcloud run services update $SERVICE_NAME --image=gcr.io/$PROJECT_ID/$IMAGE_NAME:$GITHUB_SHA --region $RUN_REGION
         # run: gcloud run deploy $PROJECT_ID --image gcr.io/$PROJECT_ID/$IMAGE_NAME:$GITHUB_SHA --platform managed --region $RUN_REGION
-
